Resolving Code Smells